crates/unsoundness_checker/tests/snapshots/extensive/markdown_test__invalid_function_defaults.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: combined_output
---
### Basic wrong type default

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal["string"]]` on a function may lead to runtime type errors.
 --> main.py:4:1
  |
2 |     return x
3 |
4 | foo.__defaults__ = ("string",)
  | ^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Setting defaults to None

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `None` on a function may lead to runtime type errors.
 --> main.py:4:1
  |
2 |     return x
3 |
4 | foo.__defaults__ = None
  | ^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Multiple parameters wrong defaults

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal[1], Literal["string"], Literal["string"]]` on a function may lead to runtime type errors.
 --> main.py:4:1
  |
2 |     return x
3 |
4 | bar.__defaults__ = (1, "string", "string")
  | ^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Clearing defaults

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `None` on a function may lead to runtime type errors.
 --> main.py:4:1
  |
2 |     return x
3 |
4 | bar.__defaults__ = None
  | ^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Too few defaults

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal[1], Literal["string"]]` on a function may lead to runtime type errors.
 --> main.py:4:1
  |
2 |     return x
3 |
4 | bar.__defaults__ = (1, "string")
  | ^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Wrong type in tuple

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal[1], Literal[2], Literal[True]]` on a function may lead to runtime type errors.
 --> main.py:4:1
  |
2 |     pass
3 |
4 | multi_param.__defaults__ = (1, 2, True)
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### All wrong types

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal["wrong"], Literal[123]]` on a function may lead to runtime type errors.
 --> main.py:4:1
  |
2 |     pass
3 |
4 | typed_func.__defaults__ = ("wrong", 123)
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Class method defaults

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal["string"]]` on a function may lead to runtime type errors.
 --> main.py:5:1
  |
3 |         return x
4 |
5 | MyClass.method.__defaults__ = ("string",)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Instance method defaults


### Static method defaults

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal["string"]]` on a function may lead to runtime type errors.
 --> main.py:6:1
  |
4 |         return x
5 |
6 | Utilities.compute.__defaults__ = ("string",)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Class method with classmethod


### Nested function defaults

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal["string"]]` on a function may lead to runtime type errors.
 --> main.py:4:5
  |
2 |     def inner(x: int = 1) -> int:
3 |         return x
4 |     inner.__defaults__ = ("string",)
  |     ^^^^^^^^^^^^^^^^^^
5 |     return inner
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Lambda defaults (if possible)


### Complex type defaults

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[list[Unknown | str]]` on a function may lead to runtime type errors.
 --> main.py:6:1
  |
4 |     return items
5 |
6 | process_list.__defaults__ = (["string", "list"],)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Optional parameter wrong default

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal["not_none_or_int"]]` on a function may lead to runtime type errors.
 --> main.py:6:1
  |
4 |     return x
5 |
6 | maybe_int.__defaults__ = ("not_none_or_int",)
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Multiple defaults assignment

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal[1], Literal[2]]` on a function may lead to runtime type errors.
 --> main.py:4:1
  |
2 |     pass
3 |
4 | func.__defaults__ = (1, 2)
  | ^^^^^^^^^^^^^^^^^
5 | func.__defaults__ = ("wrong", "types")
  |
info: rule `invalid-function-defaults` was selected in the configuration file

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal["wrong"], Literal["types"]]` on a function may lead to runtime type errors.
 --> main.py:5:1
  |
4 | func.__defaults__ = (1, 2)
5 | func.__defaults__ = ("wrong", "types")
  | ^^^^^^^^^^^^^^^^^
  |
info: rule `invalid-function-defaults` was selected in the configuration file


### Matching string defaults


### Extra matching defaults


### Adding default to no-default parameter


### Setting None for no defaults
